Fixed the spacing of the meta container

--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -227,3 +227,7 @@ $stat-count-font-size: 18px;
     color: white;
   }
 }
+
+.linked-services {
+  padding-left: 10px;
+}
